--- a/pub_list.html
+++ b/pub_list.html
@@ -1111,6 +1111,15 @@
                     con:'작업중',
                     etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
+                {
+                    division: '에러페이지',
+                    depth1:'404에러',
+                    path:'./portal/html/error404.html',
+                    date:'2022-09-23',
+                    mdate:'2022-12-02',
+                    con:'완료',
+                    etc:''
+                },
             ];
         
 
