--- a/portal/html/USR-1236-H-CONTN.html
+++ b/portal/html/USR-1236-H-CONTN.html
@@ -304,19 +304,22 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">구인구직</a>
+                        <a href="javascript:void(0);">자료실</a>
                         <ul>
                             <li><a href="">정책</a></li>
                             <li><a href="">법령</a></li>
                             <li><a href="">통계</a></li>
-                            <li><a href="">자료실</a></li>
+                            <li><a href="">구인구직</a></li>
                             <li><a href="">업무처리지원</a></li>
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">채용공고</a>
+                        <a href="javascript:void(0);">프로그램</a>
                         <ul>
-                            <li><a href="">인력Pool</a></li>
+                            <li><a href="">뉴스레터 웹진</a></li>
+                            <li><a href="">발행물</a></li>
+                            <li><a href="">보고서</a></li>
+                            <li><a href="">서식</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -325,71 +328,7 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>구인구직</h3>
-                    <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
-                </div>
-
-                <div class="tbl_box_detail type_02">
-                    <table>
-                        <caption>구인구직 상세</caption>
-                        <colgroup>
-                            <col width="15%;">
-                            <col width="35%;">
-                            <col width="15%;">
-                            <col width="35%;">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row"><label for="radio_01">구분</label></th>
-                                <td>투자사</td>
-                                <th scope="row"><label for="input_01">채용구분</label></th>
-                                <td>신입</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_02">제목</label></th>
-                                <td colspan="3">JB인베스트먼트 투자본부 채용공고</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_03">기업/기관명</label></th>
-                                <td colspan="3">JB인베스트먼트</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_04">채용 마감일</label></th>
-                                <td>2022-06-10</td>
-                                <th scope="row"><label for="radio_001">채용인원</label></th>
-                                <td>0명</td>
-                            </tr>
-                            <tr class="bg">
-                                <td colspan="4">상세내용</td>
-                            </tr>
-                            <tr>
-                                <td colspan="4">
-                                    <div class="file_download">
-                                        <div class="btn_box bg">
-                                            <a href="" class="download" download="">전체 다운로드</a>
-                                        </div>
-                                        <ul>
-                                            <li><a href="" download="">AAA.jpg</a></li>
-                                            <li><a href="" download="">BBB.hwp</a></li>
-                                            <li><a href="" download="">CCC.zip</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="btn_box_group type_tbl">
-                    <div class="btn_box bg">
-                        <a href="./USR-1241-F-FORM.html" class="btn_modi">수정</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="" class="btn_delete">삭제</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="./USR-1241-F-LIST.html" class="btn_list">목록</a>
-                    </div>
+                    <h3>프로그램</h3>
                 </div>
 
             </div>
