--- a/portal/html/USR-1241-F-LIST.html
+++ b/portal/html/USR-1241-F-LIST.html
@@ -361,7 +361,7 @@
                             <div class="tbl_box_list">
                                 <ul>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -396,7 +396,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -431,7 +431,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -466,7 +466,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -501,7 +501,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -536,7 +536,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -571,7 +571,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -653,7 +653,7 @@
                             <div class="tbl_box_list">
                                 <ul>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -688,7 +688,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -723,7 +723,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -758,7 +758,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -793,7 +793,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -828,7 +828,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -863,7 +863,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -945,7 +945,7 @@
                             <div class="tbl_box_list">
                                 <ul>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -980,7 +980,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -1015,7 +1015,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -1050,7 +1050,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday">D - 10</span>
                                                 <span class="date">2021-07-28</span>
@@ -1085,7 +1085,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">상시채용</span>
                                                 <span class="date">2021-07-28</span>
@@ -1120,7 +1120,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
@@ -1155,7 +1155,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="./USR-1241-F-DTL.html">
                                             <div class="employment_status">
                                                 <span class="dday txt">채용종료</span>
                                                 <span class="date">2021-07-28</span>
