--- a/pub_list.html
+++ b/pub_list.html
@@ -327,9 +327,9 @@
                     division: '',
                     depth1:'주식유통정보 - VC구주유통망',
                     path:'./portal/html/USR-1061-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-10-05',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
@@ -339,15 +339,15 @@
                     date:'',
                     mdate:'2022-10-06',
                     con:'작업중',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'주식유통정보 - M&A 거래정보망',
                     path:'./portal/html/USR-1063-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-10-07',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
 
@@ -359,7 +359,7 @@
                     date:'',
                     mdate:'2022-09-05',
                     con:'작업중',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -442,7 +442,7 @@
                     date:'',
                     mdate:'2022-10-14',
                     con:'작업중',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -532,7 +532,7 @@
                     date:'',
                     mdate:'2022-10-20',
                     con:'작업중',
-                    etc:'<span class="red">기획서 없음</span> [2차디자인]'
+                    etc:'<span class="red">디자인 없음</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -547,10 +547,10 @@
                     division: '',
                     depth1:'구인구직 - 채용공고 상세',
                     path:'./portal/html/USR-1241-F-DTL.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-10-24',
-                    con:'작업중',
-                    etc:'<span class="red">기획서 없음</span>'
+                    con:'완료',
+                    etc:''
                 },
                 {
                     division: '',
@@ -833,7 +833,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인] 0905디자인없음'
+                    etc:'[1차디자인]'
                 },
                 {
                     division: '',
@@ -1079,27 +1079,27 @@
                     division: 'footer',
                     depth1:'개인정보처리방침',
                     path:'./portal/html/USR-4010-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-12-01',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'서비스 이용약관',
                     path:'./portal/html/USR-4110-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-12-01',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'이메일무단수집거부',
                     path:'./portal/html/USR-4210-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-26',
                     mdate:'2022-12-02',
-                    con:'작업중',
+                    con:'완료',
                     etc:'<span class="red">컨텐츠 확인필요</span> [2차디자인]'
                 },
                 {
