--- a/portal/html/USR-4210-H-CONTN.html
+++ b/portal/html/USR-4210-H-CONTN.html
@@ -33,7 +33,7 @@
             <nav id="nav">
                 <ul>
                     <li>
-                        <a href="javascript:void(0);">벤처투자매칭</a>
+                        <a href="">벤처투자매칭</a>
                         <ul>
                             <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
                             <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
@@ -60,7 +60,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">투자가이드</a>
+                        <a href="">투자가이드</a>
                         <ul>
                             <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                             <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">정보서비스</a>
+                        <a href="">정보서비스</a>
                         <ul>
                             <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
                             <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
@@ -102,14 +102,14 @@
                             <li>
                                 <a href="./USR-1251-H-CONTN.html">업무처리지원</a>
                                 <ul>
-                                    <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
-                                    <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
+                                    <li><a href="./USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                    <li><a href="./USR-1242-F-LIST.html">신청내역확인</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">벤처투자포털</a>
+                        <a href="">벤처투자포털</a>
                         <ul>
                             <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
                             <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
@@ -168,14 +168,14 @@
             </div>
             <ul>
                 <li class="on">
-                    <a href="javascript:void(0);">벤처투자매칭</a>
+                    <a href="">벤처투자매칭</a>
                     <ul>
                         <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
                         <li><a href="./USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
                         <li><a href="./USR-1030-B-LIST.html">기업홍보</a></li>
                         <li><a href="./USR-1040-F-DASH.html">통합공시</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">벤처투자마트</a>
+                            <a href="">벤처투자마트</a>
                             <ul>
                                 <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
                                 <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
@@ -185,7 +185,7 @@
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">주식유통정보</a>
+                            <a href="">주식유통정보</a>
                             <ul>
                                 <li><a href="./USR-1061-H-CONTN.html">VC구주유통망</a></li>
                                 <li><a href="./USR-1062-H-CONTN.html">구주거래정보망</a></li>
@@ -195,7 +195,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">투자가이드</a>
+                    <a href="">투자가이드</a>
                     <ul>
                         <li><a href="./USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                         <li><a href="./USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
@@ -206,19 +206,19 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">정보서비스</a>
+                    <a href="">정보서비스</a>
                     <ul>
                         <li><a href="./USR-1211-H-CONTN.html">정책</a></li>
                         <li><a href="./USR-1213-H-CONTN.html">법령</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">통계</a>
+                            <a href="">통계</a>
                             <ul>
                                 <li><a href="./USR-1220-F-DASH.html">대시보드</a></li>
                                 <li><a href="./USR-1221-F-DTL.html">투자실적</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">자료실</a>
+                            <a href="">자료실</a>
                             <ul>
                                 <li><a href="./USR-1231-B-LIST.html">보고서</a></li>
                                 <li><a href="./USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
@@ -228,30 +228,30 @@
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">구인구직</a>
+                            <a href="">구인구직</a>
                             <ul>
                                 <li><a href="./USR-1241-F-LIST.html">채용공고</a></li>
                                 <li><a href="./USR-1242-F-LIST.html">인력Pool</a></li>
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="javascript:void(0);l">업무처리지원</a>
+                            <a href="l">업무처리지원</a>
                             <ul>
-                                <li><a href="./USR-12511-H-CONTN.html">VC 경력 확인</a></li>
-                                <li><a href="./USR-1252-F-LIST.html">신청내역확인</a></li>
+                                <li><a href="./USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                <li><a href="./USR-1242-F-LIST.html">신청내역확인</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0);">벤처투자포털</a>
+                    <a href="">벤처투자포털</a>
                     <ul>
                         <li><a href="./USR-1310-H-CONTN.html">포털소개</a></li>
                         <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
                         <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
                         <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
                         <li class="depth3">
-                            <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
+                            <a href="">벤처투자 부당행위 신고센터</a>
                             <ul>
                                 <li><a href="./USR-1350-F-FORM.html">부당행위 신고</a></li>
                                 <li><a href="./USR-1350-F-LIST.html">신고내역확인</a></li>
@@ -281,7 +281,7 @@
         
         <!-- sub title -->
         <div class="tit_box sub_tit">
-            <h2>정보서비스</h2>
+            <h2>마이페이지</h2>
             <span>모든 벤처 투자 정보를 하나로</span>
         </div>
         <!-- //sub title -->
@@ -295,28 +295,10 @@
                     <li class="home">
                         <a href="">home</a>
                     </li>
-                    <li>
-                        <a href="javascript:void(0);">정보서비스</a>
-                        <ul>
-                            <li><a href="">벤처투자매칭</a></li>
-                            <li><a href="">투자가이드</a></li>
-                            <li><a href="">벤처투자포털</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">구인구직</a>
-                        <ul>
-                            <li><a href="">정책</a></li>
-                            <li><a href="">법령</a></li>
-                            <li><a href="">통계</a></li>
-                            <li><a href="">자료실</a></li>
-                            <li><a href="">업무처리지원</a></li>
-                        </ul>
-                    </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">채용공고</a>
+                        <a href="javascript:void(0);">이메일무단수집거부</a>
                         <ul>
-                            <li><a href="">인력Pool</a></li>
+                            <li><a href="">이메일무단수집거부</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -325,71 +307,25 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>구인구직</h3>
-                    <span>메뉴에 대한 설명을 상세하게 작성합니다. 메뉴에 대한 설명을 상세하게 작성합니다.</span>
+                    <h3>이메일무단수집거부</h3>
+                    <span>메뉴에 대한 설명을 상세하게 작성합니다.</span>
                 </div>
+    
+                <div class="txt_content_box">
 
-                <div class="tbl_box_detail type_02">
-                    <table>
-                        <caption>구인구직 상세</caption>
-                        <colgroup>
-                            <col width="15%;">
-                            <col width="35%;">
-                            <col width="15%;">
-                            <col width="35%;">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row"><label for="radio_01">구분</label></th>
-                                <td>투자사</td>
-                                <th scope="row"><label for="input_01">채용구분</label></th>
-                                <td>신입</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_02">제목</label></th>
-                                <td colspan="3">JB인베스트먼트 투자본부 채용공고</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_03">기업/기관명</label></th>
-                                <td colspan="3">JB인베스트먼트</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_04">채용 마감일</label></th>
-                                <td>2022-06-10</td>
-                                <th scope="row"><label for="radio_001">채용인원</label></th>
-                                <td>0명</td>
-                            </tr>
-                            <tr class="bg">
-                                <td colspan="4">상세내용</td>
-                            </tr>
-                            <tr>
-                                <td colspan="4">
-                                    <div class="file_download">
-                                        <div class="btn_box bg">
-                                            <a href="" class="download" download="">전체 다운로드</a>
-                                        </div>
-                                        <ul>
-                                            <li><a href="" download="">AAA.jpg</a></li>
-                                            <li><a href="" download="">BBB.hwp</a></li>
-                                            <li><a href="" download="">CCC.zip</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                    <p>본 웹사이트에 게시된 이메일주소가 전자우편 수집 프로그램이나 그 밖의 기술적 장치를 이용하여 무단으로 수집되는 것을 거부하며, 이를 위반시 관계법령에 의해 형사처벌됨을 유념하시기 바랍니다.</p>
 
-                <div class="btn_box_group type_tbl">
-                    <div class="btn_box bg">
-                        <a href="./USR-1241-F-FORM.html" class="btn_modi">수정</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="" class="btn_delete">삭제</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="./USR-1241-F-LIST.html" class="btn_list">목록</a>
-                    </div>
+                    <dl class="txt_list">
+                        <dt>정보통신망이용촉진 및 정보보호등에 관한 법률</dt>
+                        <dd>
+                            <ol>
+                                <li>누구든지 전자우편주소의 수집을 거부하는 의사가 명시된 인터넷 홈페이지에서 자동으로 전자우편주소를 수집하는 프로그램 그 밖의 기술적 장치를 이용하여 전자우편주소를 수집하여서는 아니된다.</li>
+                                <li>누구든지 제1항의 규정을 위반하여 수집된 전자우편주소를 판매·유통하여서는 아니된다.</li>
+                                <li>누구든지 제1항 및 제2항의 규정에 의하여 수집·판매 및 유통이 금지된 전자우편주소임을 알고 이를 정보전송에 이용하여서는 아니 된다.</li>
+                            </ol>
+                        </dd>
+                    </dl>
+
                 </div>
 
             </div>
@@ -436,6 +372,59 @@
             <span>Copyright(C) 2022 KVCA. All Rights Reserved.</span>
         </div>
     </footer>
+
+</div>
+
+<!-- 쪽지보내기 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="radio_01">구분</label></th>
+                    <td colspan="3">투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr class="bg">
+                    <td colspan="4">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
 
 </div>
 </body>
