에러페이지 추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -1120,6 +1120,15 @@
                     con:'완료',
                     etc:''
                 },
+                {
+                    division: '',
+                    depth1:'에러',
+                    path:'./portal/html/error2.html',
+                    date:'2022-09-26',
+                    mdate:'2022-12-02',
+                    con:'완료',
+                    etc:''
+                },
             ];
         
 
