리스트업데이트

--- a/pub_list.html
+++ b/pub_list.html
@@ -30,6 +30,7 @@
     .stand_by {color:#777;}
     .ing {color:#4848D4;}
     .red {background-color: rgb(173, 13, 13); color: #fff; padding: 2px 5px;}
+    .blue {background-color: rgb(28, 60, 167); color: #fff; padding: 2px 5px; margin-left: 3px;}
     .end {color:green;}
     .list_w table td.link,
     .list_w table td.etc{text-align: left; padding-left:10px;}
@@ -334,15 +335,6 @@
                 },
                 {
                     division: '',
-                    depth1:'주식유통정보 -  구주거래정보망',
-                    path:'./portal/html/USR-1062-H-CONTN.html',
-                    date:'',
-                    mdate:'2022-10-06',
-                    con:'작업중',
-                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
-                },
-                {
-                    division: '',
                     depth1:'주식유통정보 - M&A 거래정보망',
                     path:'./portal/html/USR-1063-H-CONTN.html',
                     date:'2022-09-26',
@@ -359,7 +351,7 @@
                     date:'',
                     mdate:'2022-09-05',
                     con:'작업중',
-                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 없음</span><span class="blue">디자인 필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -442,7 +434,7 @@
                     date:'',
                     mdate:'2022-10-14',
                     con:'작업중',
-                    etc:'<span class="red">컨텐츠 없음</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 없음</span><span class="blue">디자인 필요</span>[2차디자인]'
                 },
                 {
                     division: '',
@@ -532,7 +524,7 @@
                     date:'',
                     mdate:'2022-10-20',
                     con:'작업중',
-                    etc:'<span class="red">디자인 없음</span>[2차디자인]'
+                    etc:'<span class="red">디자인 없음</span><span class="blue">디자인 필요</span>[2차디자인]'
                 },
                 {
                     division: '',
